Fix overflowing of advanced search content

--- a/src/ggrc-client/styles/components/advanced-search/_advanced-search.scss
+++ b/src/ggrc-client/styles/components/advanced-search/_advanced-search.scss
@@ -65,7 +65,8 @@
 }
 
 .advanced-search {
-  saved-search-wrapper {
+  &__wrapper {
+    height: calc(100% - 48px);
     display: flex;
 
     aside {
@@ -79,6 +80,8 @@
 
     main {
       flex: 4;
+      display: flex;
+      flex-direction: column;
     }
 
     saved-search-list {
@@ -119,6 +122,8 @@
   &__content {
     border-top: 1px solid #E0E0E0;
     min-height: 200px;
+    overflow: auto;
+    flex: 1;
   }
   &__mapping-header {
     padding: 20px 16px 4px;
@@ -127,9 +132,12 @@
   &__controls {
     float: right;
     button {
-      height: 24px;
-      padding: 0px 12px;
-      line-height: 12px;
+      padding: 4px 14px;
+      line-height: 18px;
+
+      &:last-child {
+        margin-left: 5px;
+      }
     }
   }
 }
